<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sedm.agenda.dcastro.agenda.MainActivity"
    android:id="@+id/upperLayout_main">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row_1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contactText"
            android:inputType="text"
            android:hint="@string/insertName"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row_1"
        android:layout_alignParentStart="true"
        android:id="@+id/row_2"
        android:hapticFeedbackEnabled="false"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/searchbutton_text"
            android:id="@+id/searchButton"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:layout_marginRight="20dp" />

        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/addbutton_text"
            android:id="@+id/addButton"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"/>

    </TableRow>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/row_2"
        android:layout_centerHorizontal="true"
        android:id="@+id/resultLayout"
        android:visibility="visible">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row_2"
            android:layout_alignParentStart="true"
            android:id="@+id/row_3"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/contactname_text"
                android:id="@+id/contactNameText_Fixed"
                android:layout_gravity="start"
                android:layout_marginEnd="10dp"
                android:textColor="#000000"
                android:layout_marginStart="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/resultNameText"
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row_2"
            android:layout_alignParentStart="true"
            android:id="@+id/row_4"
            android:layout_marginTop="80dp" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/contactnumber_text"
                android:id="@+id/contactNumberText_Fixed"
                android:layout_gravity="start"
                android:layout_marginEnd="10dp"
                android:textColor="#000000"
                android:layout_marginStart="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/resultNumberText"
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row_4"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callbutton_text"
                android:id="@+id/callButton"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />
        </TableRow>

    </RelativeLayout>

</RelativeLayout>
